--- a/templates/rack02.html
+++ b/templates/rack02.html
@@ -5,53 +5,53 @@
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
         <script src="static/js/application.js"></script>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <style>
-            html, body {
-                overflow-x:hidden;
-            }
-            #ztable {
-                font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
-                width: 80%;
-            }
-            #ztable td, #ztable th {
-                border: 2px solid #ddd;
-                padding: 8px;
-            }
-            #ztable tr:nth-child(even){background-color: #f2f2f2;}
-            #ztable tr:hover {background-color: #ddd;}
-            #ztable th {
-                text-align: center;
-                background-color: #4CAF50
-            }
-            #ztable td {
-                text-align: center;
-            }
-            ul {
-                position: fixed;
-                width: 100%;
-                list-style-type: none;
-                margin: 0;
-                padding: 0;
-                overflow: hidden;
-                background-color: #333; 
-            }
-            li {
-                float: left; 
-            }
-            li a {
-                display: block;
-                color: white;
-                text-align: center;
-                padding: 14px 16px;
-                text-decoration: none; 
-            }
-            li a:hover:not(.active) {
-                background-color: #111; 
-            }
-            .active {
-                background-color: #ff3b3f; 
-            }
-        </style>
+        <!-- <style> -->
+        <!--     html, body { -->
+        <!--         overflow-x:hidden; -->
+        <!--     } -->
+        <!--     #ztable { -->
+        <!--         font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif; -->
+        <!--         width: 80%; -->
+        <!--     } -->
+        <!--     #ztable td, #ztable th { -->
+        <!--         border: 2px solid #ddd; -->
+        <!--         padding: 8px; -->
+        <!--     } -->
+        <!--     #ztable tr:nth-child(even){background-color: #f2f2f2;} -->
+        <!--     #ztable tr:hover {background-color: #ddd;} -->
+        <!--     #ztable th { -->
+        <!--         text-align: center; -->
+        <!--         background-color: #4CAF50 -->
+        <!--     } -->
+        <!--     #ztable td { -->
+        <!--         text-align: center; -->
+        <!--     } -->
+        <!--     ul { -->
+        <!--         position: fixed; -->
+        <!--         width: 100%; -->
+        <!--         list-style-type: none; -->
+        <!--         margin: 0; -->
+        <!--         padding: 0; -->
+        <!--         overflow: hidden; -->
+        <!--         background-color: #333; --> 
+        <!--     } -->
+        <!--     li { -->
+        <!--         float: left; --> 
+        <!--     } -->
+        <!--     li a { -->
+        <!--         display: block; -->
+        <!--         color: white; -->
+        <!--         text-align: center; -->
+        <!--         padding: 14px 16px; -->
+        <!--         text-decoration: none; --> 
+        <!--     } -->
+        <!--     li a:hover:not(.active) { -->
+        <!--         background-color: #111; --> 
+        <!--     } -->
+        <!--     .active { -->
+        <!--         background-color: #ff3b3f; --> 
+        <!--     } -->
+        <!-- </style> -->
     </head>
     <body>
         <ul>
