--- a/templates/index.html
+++ b/templates/index.html
@@ -5,25 +5,25 @@
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
         <script src="static/js/application.js"></script>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <style>
-            #ztable {
-                font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
-                width: 80%;
-            }
-            #ztable td, #ztable th {
-                border: 2px solid #ddd;
-                padding: 8px;
-            }
-            #ztable tr:nth-child(even){background-color: #f2f2f2;}
-            #ztable tr:hover {background-color: #ddd;}
-            #ztable th {
-                text-align: center;
-                background-color: #4CAF50
-            }
-            #ztable td {
-                text-align: center;
-            }
-        </style>
+        <!-- <style> -->
+        <!--     #ztable { -->
+        <!--         font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif; -->
+        <!--         width: 80%; -->
+        <!--     } -->
+        <!--     #ztable td, #ztable th { -->
+        <!--         border: 2px solid #ddd; -->
+        <!--         padding: 8px; -->
+        <!--     } -->
+        <!--     #ztable tr:nth-child(even){background-color: #f2f2f2;} -->
+        <!--     #ztable tr:hover {background-color: #ddd;} -->
+        <!--     #ztable th { -->
+        <!--         text-align: center; -->
+        <!--         background-color: #4CAF50 -->
+        <!--     } -->
+        <!--     #ztable td { -->
+        <!--         text-align: center; -->
+        <!--     } -->
+        <!-- </style> -->
     </head>
     <body>
         <div>
