--- a/templates/navbase.html
+++ b/templates/navbase.html
@@ -30,13 +30,72 @@
                         <li>
                             <a href="#" class="disabledLink">Directory</a>
                         </li>
+                        <li>
+                            <a href="http://10.0.1.51:5000/invhome">Inventory</a>
+                        </li>
+                        <li>
+                            <a href="http://10.0.1.51:5000/maintenance">Maintenance</a>
+                        </li>
+                        <li>
+                            <a href="http://10.0.1.51:5000/purchhome">Purchasing</a>
+                        </li>
+                        <li>
+                            <a href="http://10.0.1.51:5000/shipping">Shipping</a>
+                        </li>
+                        <li>
+                            <a href="http://10.0.1.51:5000/supplies">Supplies</a>
+                        </li>
                     </ul>
                 </li>
                 <li>
                     <a href="#engSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Engineering</a>
                     <ul class="collapse list-unstyled" id="engSubmenu">
                         <li>
+                            <a href="http://10.0.1.51:5000/enghome">Active Jobs</a>
+                        </li>
+                        <li>
+                            <a href="http://10.0.1.51:5000/bdhome">Bend Deduction</a>
+                        </li>
+                        <li>
+                            <a href="#" class="disabledLink">Hardware</a>
+                        </li>
+                        <li>
+                            <a href="http://10.0.1.51:5000/nest">Nesting</a>
+                        </li>
+                        <li>
                             <a href="#" class="disabledLink">Tap Chart</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#deptSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Departments</a>
+                    <ul class="collapse list-unstyled" id="deptSubmenu">
+                        <li>
+                            <a href="http://10.0.1.51:5000/flaserhome">Fixture Laser</a>
+                        </li>
+                        <li>
+                            <a href="http://10.0.1.51:5000/forminghome">Forming</a>
+                        </li>
+                        <li>
+                            <a href="http://10.0.1.51:5000/enthome">Laser (Enterprise)</a>
+                        </li>
+                        <li>
+                            <a href="http://10.0.1.51:5000/machhome">Machining</a>
+                        </li>
+                        <li>
+                            <a href="http://10.0.1.51:5000/punchhome">Punch</a>
+                        </li>
+                        <li>
+                            <a href="http://10.0.1.51:5000/sawhome">Saw</a>
+                        </li>
+                        <li>
+                            <a href="http://10.0.1.51:5000/shearhome">Shear</a>
+                        </li>
+                        <li>
+                            <a href="http://10.0.1.51:5000/slaserhome">Static Laser</a>
+                        </li>
+                        <li>
+                            <a href="http://10.0.1.51:5000/tlhome">Tube Laser</a>
                         </li>
                     </ul>
                 </li>
