--- a/templates/navbase.html
+++ b/templates/navbase.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <!-- New Bootstrap -->
+        <!-- Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-        <!-- Bootstrap CSS -->
+        <!-- CSS -->
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
         <title>Monarch Home</title>
     </head>
@@ -17,7 +17,9 @@
 <!-- Sidebar  -->
         <nav id="sidebar">
             <div class="sidebar-header">
-                <h3><a href="{{ url_for('index') }}">Monarch Metal</a></h3>
+                <h3>
+                    <a href="http://10.0.1.51:5000/index">Monarch Metal</a>
+                </h3>
             </div>
 
             <ul class="list-unstyled components">
@@ -103,7 +105,7 @@
                     <a href="#rackSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Material Rack</a>
                     <ul class="collapse list-unstyled" id="rackSubmenu">
                         <li>
-                            <a href="http://10.0.1.50:5000">Home</a>
+                            <a href="{{ url_for('index') }}">Home</a>
                         </li>
                         <li>
                             <a href="{{ url_for('rack01') }}">Rack 01</a>
@@ -155,7 +157,7 @@
                     <a href="#docSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Documents</a>
                     <ul class="collapse list-unstyled" id="docSubmenu">
                         <li>
-                            <a href="#" class="disabled">Training</a>
+                            <a href="#" class="disabledLink">Training</a>
                         </li>
                     </ul>
                 </li>
