--- a/templates/rack02.html
+++ b/templates/rack02.html
@@ -1,104 +1,35 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-        <script src="static/js/application.js"></script>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <!-- <style> -->
-        <!--     html, body { -->
-        <!--         overflow-x:hidden; -->
-        <!--     } -->
-        <!--     #ztable { -->
-        <!--         font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif; -->
-        <!--         width: 80%; -->
-        <!--     } -->
-        <!--     #ztable td, #ztable th { -->
-        <!--         border: 2px solid #ddd; -->
-        <!--         padding: 8px; -->
-        <!--     } -->
-        <!--     #ztable tr:nth-child(even){background-color: #f2f2f2;} -->
-        <!--     #ztable tr:hover {background-color: #ddd;} -->
-        <!--     #ztable th { -->
-        <!--         text-align: center; -->
-        <!--         background-color: #4CAF50 -->
-        <!--     } -->
-        <!--     #ztable td { -->
-        <!--         text-align: center; -->
-        <!--     } -->
-        <!--     ul { -->
-        <!--         position: fixed; -->
-        <!--         width: 100%; -->
-        <!--         list-style-type: none; -->
-        <!--         margin: 0; -->
-        <!--         padding: 0; -->
-        <!--         overflow: hidden; -->
-        <!--         background-color: #333; --> 
-        <!--     } -->
-        <!--     li { -->
-        <!--         float: left; --> 
-        <!--     } -->
-        <!--     li a { -->
-        <!--         display: block; -->
-        <!--         color: white; -->
-        <!--         text-align: center; -->
-        <!--         padding: 14px 16px; -->
-        <!--         text-decoration: none; --> 
-        <!--     } -->
-        <!--     li a:hover:not(.active) { -->
-        <!--         background-color: #111; --> 
-        <!--     } -->
-        <!--     .active { -->
-        <!--         background-color: #ff3b3f; --> 
-        <!--     } -->
-        <!-- </style> -->
-    </head>
+{% extends 'base.html' %}
+
+{% block content %}
+    <h1 align="center">Rack 02</h1>
+    <br>
     <body>
-        <ul>
-            <li><a class="active"><b><font color="white">Material Rack</b></font></a></li>
-            <li style="float:left; margin-left: 30px; list-style-type: square;"><a href="{{ url_for('index') }}">Monarch Home</a></li>
-            <li style="float:right; margin-right: 30px; list-style-type: square;"><a href="{{ url_for('rack02') }}">Rack 02</a></li>
-            <li style="float:right; margin-right: 30px; list-style-type: square;"><a href="{{ url_for('rack01') }}">Rack 01</a></li>
-            <li style="float:right; margin-right: 30px; list-style-type: square;"><a href="{{ url_for('index') }}">Rack Home</a></li>
-        </ul>
-        <div>
-            <div class="row">
-                <br>
-                <br>
-                <br>
-                <h3 align="center">Rack 02</h3>
-                <br>
-                <table id="ztable" align="center">
-                    <thead>
-                    <tr>
-                        <th width="10%">Row</th>
-                        <th width="25%">Material Type</th>
-                        <th width="15%">Sheet Size</th>
-                        <th width="10%">No. of Sheets</th>
-                        <th width="40%">Notes</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                        <!-- <tr><td>18</td><td colspan="5">Not In Use</td></tr> -->
-                        
-                        <tr><td><a href="/edit/{{ rack[35][0] }}"><span style="font-weight:bold">{{ rack[35][1] }}</span></a></td><td> {{ rack[35][3] }}</td><td>{{ rack[35][4] }}</td><td>{{rack[35][2] }}</td><td> {{ rack[35][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[34][0] }}"><span style="font-weight:bold">{{ rack[34][1] }}</span></a></td><td> {{ rack[34][3] }}</td><td>{{ rack[34][4] }}</td><td>{{rack[34][2] }}</td><td> {{ rack[34][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[33][0] }}"><span style="font-weight:bold">{{ rack[33][1] }}</span></a></td><td> {{ rack[33][3] }}</td><td>{{ rack[33][4] }}</td><td>{{rack[33][2] }}</td><td> {{ rack[33][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[32][0] }}"><span style="font-weight:bold">{{ rack[32][1] }}</span></a></td><td> {{ rack[32][3] }}</td><td>{{ rack[32][4] }}</td><td>{{rack[32][2] }}</td><td> {{ rack[32][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[31][0] }}"><span style="font-weight:bold">{{ rack[31][1] }}</span></a></td><td> {{ rack[31][3] }}</td><td>{{ rack[31][4] }}</td><td>{{rack[31][2] }}</td><td> {{ rack[31][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[30][0] }}"><span style="font-weight:bold">{{ rack[30][1] }}</span></a></td><td> {{ rack[30][3] }}</td><td>{{ rack[30][4] }}</td><td>{{rack[30][2] }}</td><td> {{ rack[30][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[29][0] }}"><span style="font-weight:bold">{{ rack[29][1] }}</span></a></td><td> {{ rack[29][3] }}</td><td>{{ rack[29][4] }}</td><td>{{rack[29][2] }}</td><td> {{ rack[29][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[28][0] }}"><span style="font-weight:bold">{{ rack[28][1] }}</span></a></td><td> {{ rack[28][3] }}</td><td>{{ rack[28][4] }}</td><td>{{rack[28][2] }}</td><td> {{ rack[28][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[27][0] }}"><span style="font-weight:bold">{{ rack[27][1] }}</span></a></td><td> {{ rack[27][3] }}</td><td>{{ rack[27][4] }}</td><td>{{rack[27][2] }}</td><td> {{ rack[27][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[26][0] }}"><span style="font-weight:bold">{{ rack[26][1] }}</span></a></td><td> {{ rack[26][3] }}</td><td>{{ rack[26][4] }}</td><td>{{rack[26][2] }}</td><td> {{ rack[26][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[25][0] }}"><span style="font-weight:bold">{{ rack[25][1] }}</span></a></td><td> {{ rack[25][3] }}</td><td>{{ rack[25][4] }}</td><td>{{rack[25][2] }}</td><td> {{ rack[25][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[24][0] }}"><span style="font-weight:bold">{{ rack[24][1] }}</span></a></td><td> {{ rack[24][3] }}</td><td>{{ rack[24][4] }}</td><td>{{rack[24][2] }}</td><td> {{ rack[24][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[23][0] }}"><span style="font-weight:bold">{{ rack[23][1] }}</span></a></td><td> {{ rack[23][3] }}</td><td>{{ rack[23][4] }}</td><td>{{rack[23][2] }}</td><td> {{ rack[23][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[22][0] }}"><span style="font-weight:bold">{{ rack[22][1] }}</span></a></td><td> {{ rack[22][3] }}</td><td>{{ rack[22][4] }}</td><td>{{rack[22][2] }}</td><td> {{ rack[22][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[21][0] }}"><span style="font-weight:bold">{{ rack[21][1] }}</span></a></td><td> {{ rack[21][3] }}</td><td>{{ rack[21][4] }}</td><td>{{rack[21][2] }}</td><td> {{ rack[21][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[20][0] }}"><span style="font-weight:bold">{{ rack[20][1] }}</span></a></td><td> {{ rack[20][3] }}</td><td>{{ rack[20][4] }}</td><td>{{rack[20][2] }}</td><td> {{ rack[20][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[19][0] }}"><span style="font-weight:bold">{{ rack[19][1] }}</span></a></td><td> {{ rack[19][3] }}</td><td>{{ rack[19][4] }}</td><td>{{rack[19][2] }}</td><td> {{ rack[19][5] }} </td></tr>
-                        <tr><td><a href="/edit/{{ rack[18][0] }}"><span style="font-weight:bold">{{ rack[18][1] }}</span></a></td><td> {{ rack[18][3] }}</td><td>{{ rack[18][4] }}</td><td>{{rack[18][2] }}</td><td> {{ rack[18][5] }} </td></tr>
+        <table id="myTable">
+            <tr class="header">
+                <th width="10%">Row</th>
+                <th width="15%">Material Type</th>
+                <th width="15%">Sheet Size</th>
+                <th width="10%">No. of Sheets</th>
+                <th width="50%">Notes</th>
+            </tr>
+            <tr><td><a href="/edit/{{ rack[35][0] }}"><span style="font-weight:bold">{{ rack[35][1] }}</span></a></td><td> {{ rack[35][3] }}</td><td>{{ rack[35][4] }}</td><td>{{rack[35][2] }}</td><td> {{ rack[35][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[34][0] }}"><span style="font-weight:bold">{{ rack[34][1] }}</span></a></td><td> {{ rack[34][3] }}</td><td>{{ rack[34][4] }}</td><td>{{rack[34][2] }}</td><td> {{ rack[34][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[33][0] }}"><span style="font-weight:bold">{{ rack[33][1] }}</span></a></td><td> {{ rack[33][3] }}</td><td>{{ rack[33][4] }}</td><td>{{rack[33][2] }}</td><td> {{ rack[33][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[32][0] }}"><span style="font-weight:bold">{{ rack[32][1] }}</span></a></td><td> {{ rack[32][3] }}</td><td>{{ rack[32][4] }}</td><td>{{rack[32][2] }}</td><td> {{ rack[32][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[31][0] }}"><span style="font-weight:bold">{{ rack[31][1] }}</span></a></td><td> {{ rack[31][3] }}</td><td>{{ rack[31][4] }}</td><td>{{rack[31][2] }}</td><td> {{ rack[31][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[30][0] }}"><span style="font-weight:bold">{{ rack[30][1] }}</span></a></td><td> {{ rack[30][3] }}</td><td>{{ rack[30][4] }}</td><td>{{rack[30][2] }}</td><td> {{ rack[30][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[29][0] }}"><span style="font-weight:bold">{{ rack[29][1] }}</span></a></td><td> {{ rack[29][3] }}</td><td>{{ rack[29][4] }}</td><td>{{rack[29][2] }}</td><td> {{ rack[29][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[28][0] }}"><span style="font-weight:bold">{{ rack[28][1] }}</span></a></td><td> {{ rack[28][3] }}</td><td>{{ rack[28][4] }}</td><td>{{rack[28][2] }}</td><td> {{ rack[28][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[27][0] }}"><span style="font-weight:bold">{{ rack[27][1] }}</span></a></td><td> {{ rack[27][3] }}</td><td>{{ rack[27][4] }}</td><td>{{rack[27][2] }}</td><td> {{ rack[27][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[26][0] }}"><span style="font-weight:bold">{{ rack[26][1] }}</span></a></td><td> {{ rack[26][3] }}</td><td>{{ rack[26][4] }}</td><td>{{rack[26][2] }}</td><td> {{ rack[26][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[25][0] }}"><span style="font-weight:bold">{{ rack[25][1] }}</span></a></td><td> {{ rack[25][3] }}</td><td>{{ rack[25][4] }}</td><td>{{rack[25][2] }}</td><td> {{ rack[25][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[24][0] }}"><span style="font-weight:bold">{{ rack[24][1] }}</span></a></td><td> {{ rack[24][3] }}</td><td>{{ rack[24][4] }}</td><td>{{rack[24][2] }}</td><td> {{ rack[24][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[23][0] }}"><span style="font-weight:bold">{{ rack[23][1] }}</span></a></td><td> {{ rack[23][3] }}</td><td>{{ rack[23][4] }}</td><td>{{rack[23][2] }}</td><td> {{ rack[23][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[22][0] }}"><span style="font-weight:bold">{{ rack[22][1] }}</span></a></td><td> {{ rack[22][3] }}</td><td>{{ rack[22][4] }}</td><td>{{rack[22][2] }}</td><td> {{ rack[22][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[21][0] }}"><span style="font-weight:bold">{{ rack[21][1] }}</span></a></td><td> {{ rack[21][3] }}</td><td>{{ rack[21][4] }}</td><td>{{rack[21][2] }}</td><td> {{ rack[21][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[20][0] }}"><span style="font-weight:bold">{{ rack[20][1] }}</span></a></td><td> {{ rack[20][3] }}</td><td>{{ rack[20][4] }}</td><td>{{rack[20][2] }}</td><td> {{ rack[20][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[19][0] }}"><span style="font-weight:bold">{{ rack[19][1] }}</span></a></td><td> {{ rack[19][3] }}</td><td>{{ rack[19][4] }}</td><td>{{rack[19][2] }}</td><td> {{ rack[19][5] }} </td></tr>
+            <tr><td><a href="/edit/{{ rack[18][0] }}"><span style="font-weight:bold">{{ rack[18][1] }}</span></a></td><td> {{ rack[18][3] }}</td><td>{{ rack[18][4] }}</td><td>{{rack[18][2] }}</td><td> {{ rack[18][5] }} </td></tr>
                         
                         <!-- <tr><td><a href="/edit/{{ rack[35][0] }}"><span style="font-weight:bold">{{ rack[35][1] }}</span></a></td><td> {{ rack[35][3] }}</td><td>{{ rack[35][4] }}</td><td><div id="log36"></div></td><td> {{ rack[35][5] }} </td></tr> -->
                         <!-- <tr><td><a href="/edit/{{ rack[34][0] }}"><span style="font-weight:bold">{{ rack[34][1] }}</span></a></td><td> {{ rack[34][3] }}</td><td>{{ rack[34][4] }}</td><td><div id="log35"></div></td><td> {{ rack[34][5] }} </td></tr> -->
@@ -118,9 +49,7 @@
                         <!-- <tr><td><a href="/edit/{{ rack[20][0] }}"><span style="font-weight:bold">{{ rack[20][1] }}</span></a></td><td> {{ rack[20][3] }}</td><td>{{ rack[20][4] }}</td><td><div id="log21"></div></td><td> {{ rack[20][5] }} </td></tr> -->
                         <!-- <tr><td><a href="/edit/{{ rack[19][0] }}"><span style="font-weight:bold">{{ rack[19][1] }}</span></a></td><td> {{ rack[19][3] }}</td><td>{{ rack[19][4] }}</td><td><div id="log20"></div></td><td> {{ rack[19][5] }} </td></tr> -->
                         <!-- <tr><td><a href="/edit/{{ rack[18][0] }}"><span style="font-weight:bold">{{ rack[18][1] }}</span></a></td><td> {{ rack[18][3] }}</td><td>{{ rack[18][4] }}</td><td><div id="log19"></div></td><td> {{ rack[18][5] }} </td></tr> -->
-                    </tbody>
-                </table>
-            </div>
-        </div>
+                    <!-- </tbody> -->
+        </table>
     </body>
-</html>
+{% endblock %}
